--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <button data-modal-open>Open</button>
 
-    <dialog data-modal>
+    <dialog class="basic" data-modal>
         <form>
             <input name="name" type="text">
             <button type="submit" formmethod="dialog">Cancel</button>
@@ -20,15 +20,15 @@
     </dialog>
 
     <script>
-        const openBtn = document.querySelector( '[data-modal-open]' );
-        const modal = document.querySelector( '[data-modal]' );
+        const openBtn = document.querySelector('[data-modal-open]');
+        const modal = document.querySelector('[data-modal]');
 
-        openBtn.addEventListener( "click", () =>
+        openBtn.addEventListener("click", () =>
         {
             modal.showModal();
-        } );
+        });
 
-        modal.addEventListener( "click", ( e ) =>
+        modal.addEventListener("click", (e) =>
         {
             const dialogDimentions = modal.getBoundingClientRect();
             if (
@@ -38,9 +38,9 @@
                 e.clientY > dialogDimentions.bottom
             )
             {
-                modal.close()
+                modal.close();
             }
-        } )
+        })
     </script>
 </body>
 
